Modify for hosting in render